[project]
name = "docker-docs-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "myst-parser>=4.0.1",
    "ruff>=0.9.7",
    "sphinx>=8.2.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
]
